crates/cli/tests/snapshots/snapshot_tests__codeclimate_circular_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/circular-dependency",
    "description": "Circular dependency: src/a.ts → src/b.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "9f70c2f1869ab63a",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
