crates/cli/tests/snapshots/snapshot_tests__codeclimate_duplicate_exports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "1d5f8d291b3b6fcc",
    "location": {
      "path": "src/config.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "ec485b2f5051e03e",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 30
      }
    }
  }
]
