crates/cli/tests/snapshots/snapshot_tests__codeclimate_duplication_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 1 (11 lines, 2 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "345cae8fb0953084",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 1 (11 lines, 2 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "9bd1ed63213bb254",
    "location": {
      "path": "src/helpers.ts",
      "lines": {
        "begin": 5
      }
    }
  }
]
