crates/cli/tests/snapshots/snapshot_tests__codeclimate_health_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/high-complexity",
    "description": "'processData' has cyclomatic complexity 25 (threshold: 20) and cognitive complexity 30 (threshold: 15)",
    "categories": [
      "Complexity"
    ],
    "severity": "major",
    "fingerprint": "5e1e11ec6d9fd112",
    "location": {
      "path": "src/complex.ts",
      "lines": {
        "begin": 42
      }
    }
  }
]
