crates/cli/tests/snapshots/snapshot_tests__codeclimate_health_with_runtime_coverage.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/high-complexity",
    "description": "'processData' has cyclomatic complexity 25 (threshold: 20) and cognitive complexity 30 (threshold: 15)",
    "categories": [
      "Complexity"
    ],
    "severity": "major",
    "fingerprint": "5e1e11ec6d9fd112",
    "location": {
      "path": "src/complex.ts",
      "lines": {
        "begin": 42
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/runtime-review-required",
    "description": "'coldPath' runtime coverage verdict: review required (0 invocations)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "11693d66618a1875",
    "location": {
      "path": "src/cold.ts",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/runtime-coverage-unavailable",
    "description": "'lateBound' runtime coverage verdict: coverage unavailable (untracked)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "43cd8b63515108da",
    "location": {
      "path": "src/unknown.ts",
      "lines": {
        "begin": 8
      }
    }
  }
]
