crates/cli/tests/snapshots/snapshot_tests__codeclimate_multiple_exports_same_file.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "6b7fb5f6ae546edb",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Export 'formatDate' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "17ea99b7c10a19ea",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 25
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Export 'capitalize' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "6d706a9a71d96f77",
    "location": {
      "path": "src/helpers.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
