crates/cli/tests/snapshots/snapshot_tests__codeclimate_output.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-file",
    "description": "File is not reachable from any entry point",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "cf1a29e15c023d0d",
    "location": {
      "path": "src/dead.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "6b7fb5f6ae546edb",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-type",
    "description": "Type export 'OldType' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "08e7c60812746b38",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-dependency",
    "description": "Package 'lodash' is in dependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "e2e2b90970ca2c99",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-dev-dependency",
    "description": "Package 'jest' is in devDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "74a05f7f893190e6",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-optional-dependency",
    "description": "Package 'fsevents' is in optionalDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "5ce60c2d71e2d6ad",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/type-only-dependency",
    "description": "Package 'zod' is only imported via type-only imports (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "3d74179acf41bda0",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/test-only-dependency",
    "description": "Package 'msw' is only imported by test files (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "8c337e042e8095c8",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-enum-member",
    "description": "Enum member 'Status.Deprecated' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "4fdc52289547d8e7",
    "location": {
      "path": "src/enums.ts",
      "lines": {
        "begin": 8
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-class-member",
    "description": "Class member 'UserService.legacyMethod' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "dd4d62478ebd0dea",
    "location": {
      "path": "src/service.ts",
      "lines": {
        "begin": 42
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unresolved-import",
    "description": "Import './missing-module' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "af1eb4eb0844d085",
    "location": {
      "path": "src/app.ts",
      "lines": {
        "begin": 3
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unlisted-dependency",
    "description": "Package 'chalk' is imported but not listed in package.json",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "db9e8d2cbc4f7fcb",
    "location": {
      "path": "src/cli.ts",
      "lines": {
        "begin": 2
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "1d5f8d291b3b6fcc",
    "location": {
      "path": "src/config.ts",
      "lines": {
        "begin": 15
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/duplicate-export",
    "description": "Export 'Config' appears in multiple modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "ec485b2f5051e03e",
    "location": {
      "path": "src/types.ts",
      "lines": {
        "begin": 30
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/circular-dependency",
    "description": "Circular dependency: src/a.ts → src/b.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "9f70c2f1869ab63a",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 3
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/re-export-cycle",
    "description": "Re-export cycle: src/api/index.ts <-> src/api/internal/index.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "d5108d19da1b478c",
    "location": {
      "path": "src/api/index.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-catalog-entry",
    "description": "Catalog entry 'is-even' is not referenced by any workspace package",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "de3ed2a0e833c4b0",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 6
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-catalog-entry",
    "description": "Catalog entry 'old-thing' (catalog 'legacy') is not referenced by any workspace package",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "291da29e40ca77e0",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 12
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/empty-catalog-group",
    "description": "Catalog group 'react17' has no entries",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "eeb511f2856ae1d9",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 10
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unresolved-catalog-reference",
    "description": "Package 'old-react' is referenced via `catalog:react17` but catalog 'react17' does not declare it; `pnpm install` will fail (available in: react18)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "5deef6f1aba529f1",
    "location": {
      "path": "packages/app/package.json",
      "lines": {
        "begin": 14
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/unused-dependency-override",
    "description": "Override `axios` forces version `^1.6.0` but `axios` is not declared by any workspace package or resolved in pnpm-lock.yaml (may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "65639e7e9f12c73f",
    "location": {
      "path": "pnpm-workspace.yaml",
      "lines": {
        "begin": 9
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/misconfigured-dependency-override",
    "description": "Override `@types/react@<<18` -> `18.0.0` is malformed: override key cannot be parsed",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "6c6967f2a0a29fc8",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 3
      }
    }
  }
]
