crates/cli/tests/snapshots/snapshot_tests__codeclimate_re_export_cycles_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/re-export-cycle",
    "description": "Re-export cycle: src/api/index.ts <-> src/api/internal/index.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "d5108d19da1b478c",
    "location": {
      "path": "src/api/index.ts",
      "lines": {
        "begin": 1
      }
    }
  },
  {
    "type": "issue",
    "check_name": "plow/re-export-cycle",
    "description": "Re-export cycle (self-loop): src/utils/index.ts",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "e5479debd850ca4d",
    "location": {
      "path": "src/utils/index.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
