crates/cli/tests/snapshots/snapshot_tests__codeclimate_re_export_variant.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Re-export 'reExported' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "086c644864d841b0",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
