crates/cli/tests/snapshots/snapshot_tests__codeclimate_type_only_deps.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/type-only-dependency",
    "description": "Package 'zod' is only imported via type-only imports (consider moving to devDependencies)",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "3d74179acf41bda0",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 8
      }
    }
  }
]
